# deds_project

./: AllAenccTables.ipynb  ProductMerged.ipynb  pyproject.toml  salesHeader.ipynb
Documents/: Shortlist.ipynb  handleiding.ipynb
Machinelearning/: Classificatiemodel.ipynb  FI-model_bestellingen.ipynb  clustering.ipynb  regressiemodel.ipynb
deds/: adventureworks.ipynb  aenc.accdb  aenc.laccdb  northwind.ipynb  product.ipynb  regressiemodel.ipynb  test.ipynb
webapp/: package-lock.json
webapp/src/: App.css  App.js  Footer.js  Home.js  Navbar.js  PowerBIDashboard.js  Profile.js
