[tool.poetry]
name = "deds-project"
version = "0.1.0"
description = ""
authors = ["Diego <53939730+DiegoIEC@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
pyodbc = "^5.1.0"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
